gras/file_dependency/javascript/grammar/JavaScriptParser.py
# Generated from JavaScriptParser.g4 by ANTLR 4.7.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *
from typing.io import TextIO

from gras.file_dependency.javascript.grammar.JavaScriptParserBase import JavaScriptParserBase




class JavaScriptParser(JavaScriptParserBase):
    grammarFileName = "JavaScriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'",
                    "';'", "','", "'='", "'?'", "':'", "'...'", "'.'",
                    "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'",
                    "'/'", "'%'", "'**'", "'??'", "'#'", "'>>'", "'<<'",
                    "'>>>'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='",
                    "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'",
                    "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='",
                    "'>>>='", "'&='", "'^='", "'|='", "'**='", "'=>'",
                    "'null'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "'break'", "'do'", "'instanceof'",
                    "'typeof'", "'case'", "'else'", "'new'", "'var'", "'catch'",
                    "'finally'", "'return'", "'void'", "'continue'", "'for'",
                    "'switch'", "'while'", "'debugger'", "'function'",
                    "'this'", "'with'", "'default'", "'if'", "'throw'",
                    "'delete'", "'in'", "'try'", "'as'", "'from'", "'class'",
                    "'enum'", "'extends'", "'super'", "'const'", "'export'",
                    "'import'", "'async'", "'await'", "'implements'", "<INVALID>",
                    "<INVALID>", "'private'", "'public'", "'interface'",
                    "'package'", "'protected'", "'static'", "'yield'"]

    symbolicNames = ["<INVALID>", "HashBangLine", "MultiLineComment", "SingleLineComment",
                     "RegularExpressionLiteral", "OpenBracket", "CloseBracket",
                     "OpenParen", "CloseParen", "OpenBrace", "CloseBrace",
                     "SemiColon", "Comma", "Assign", "QuestionMark", "Colon",
                     "Ellipsis", "Dot", "PlusPlus", "MinusMinus", "Plus",
                     "Minus", "BitNot", "Not", "Multiply", "Divide", "Modulus",
                     "Power", "NullCoalesce", "Hashtag", "RightShiftArithmetic",
                     "LeftShiftArithmetic", "RightShiftLogical", "LessThan",
                     "MoreThan", "LessThanEquals", "GreaterThanEquals",
                     "Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals",
                     "BitAnd", "BitXOr", "BitOr", "And", "Or", "MultiplyAssign",
                     "DivideAssign", "ModulusAssign", "PlusAssign", "MinusAssign",
                     "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign",
                     "RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign",
                     "BitOrAssign", "PowerAssign", "ARROW", "NullLiteral",
                     "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral",
                     "OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral",
                     "BigHexIntegerLiteral", "BigOctalIntegerLiteral",
                     "BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral",
                     "Break", "Do", "Instanceof", "Typeof", "Case", "Else",
                     "New", "Var", "Catch", "Finally", "Return", "Void",
                     "Continue", "For", "Switch", "While", "Debugger",
                     "Function", "This", "With", "Default", "If", "Throw",
                     "Delete", "In", "Try", "As", "From", "Class", "Enum",
                     "Extends", "Super", "Const", "Export", "Import", "Async",
                     "Await", "Implements", "StrictLet", "NonStrictLet",
                     "Private", "Public", "Interface", "Package", "Protected",
                     "Static", "Yield", "Identifier", "StringLiteral",
                     "TemplateStringLiteral", "WhiteSpaces", "LineTerminator",
                     "HtmlComment", "CDataComment", "UnexpectedCharacter"]

    RULE_program = 0
    RULE_sourceElement = 1
    RULE_statement = 2
    RULE_block = 3
    RULE_statementList = 4
    RULE_importStatement = 5
    RULE_importFromBlock = 6
    RULE_moduleItems = 7
    RULE_importDefault = 8
    RULE_importNamespace = 9
    RULE_importFrom = 10
    RULE_aliasName = 11
    RULE_exportStatement = 12
    RULE_exportFromBlock = 13
    RULE_declaration = 14
    RULE_variableStatement = 15
    RULE_variableDeclarationList = 16
    RULE_variableDeclaration = 17
    RULE_emptyStatement = 18
    RULE_expressionStatement = 19
    RULE_ifStatement = 20
    RULE_iterationStatement = 21
    RULE_varModifier = 22
    RULE_continueStatement = 23
    RULE_breakStatement = 24
    RULE_returnStatement = 25
    RULE_yieldStatement = 26
    RULE_withStatement = 27
    RULE_switchStatement = 28
    RULE_caseBlock = 29
    RULE_caseClauses = 30
    RULE_caseClause = 31
    RULE_defaultClause = 32
    RULE_labelledStatement = 33
    RULE_throwStatement = 34
    RULE_tryStatement = 35
    RULE_catchProduction = 36
    RULE_finallyProduction = 37
    RULE_debuggerStatement = 38
    RULE_functionDeclaration = 39
    RULE_classDeclaration = 40
    RULE_classTail = 41
    RULE_classElement = 42
    RULE_methodDefinition = 43
    RULE_formalParameterList = 44
    RULE_formalParameterArg = 45
    RULE_lastFormalParameterArg = 46
    RULE_functionBody = 47
    RULE_sourceElements = 48
    RULE_arrayLiteral = 49
    RULE_elementList = 50
    RULE_arrayElement = 51
    RULE_propertyAssignment = 52
    RULE_propertyName = 53
    RULE_arguments = 54
    RULE_argument = 55
    RULE_expressionSequence = 56
    RULE_singleExpression = 57
    RULE_assignable = 58
    RULE_objectLiteral = 59
    RULE_anoymousFunction = 60
    RULE_arrowFunctionParameters = 61
    RULE_arrowFunctionBody = 62
    RULE_assignmentOperator = 63
    RULE_literal = 64
    RULE_numericLiteral = 65
    RULE_bigintLiteral = 66
    RULE_getter = 67
    RULE_setter = 68
    RULE_identifierName = 69
    RULE_identifier = 70
    RULE_reservedWord = 71
    RULE_keyword = 72
    RULE_let = 73
    RULE_eos = 74

    ruleNames = ["program", "sourceElement", "statement", "block", "statementList",
                 "importStatement", "importFromBlock", "moduleItems",
                 "importDefault", "importNamespace", "importFrom", "aliasName",
                 "exportStatement", "exportFromBlock", "declaration",
                 "variableStatement", "variableDeclarationList", "variableDeclaration",
                 "emptyStatement", "expressionStatement", "ifStatement",
                 "iterationStatement", "varModifier", "continueStatement",
                 "breakStatement", "returnStatement", "yieldStatement",
                 "withStatement", "switchStatement", "caseBlock", "caseClauses",
                 "caseClause", "defaultClause", "labelledStatement", "throwStatement",
                 "tryStatement", "catchProduction", "finallyProduction",
                 "debuggerStatement", "functionDeclaration", "classDeclaration",
                 "classTail", "classElement", "methodDefinition", "formalParameterList",
                 "formalParameterArg", "lastFormalParameterArg", "functionBody",
                 "sourceElements", "arrayLiteral", "elementList", "arrayElement",
                 "propertyAssignment", "propertyName", "arguments", "argument",
                 "expressionSequence", "singleExpression", "assignable",
                 "objectLiteral", "anoymousFunction", "arrowFunctionParameters",
                 "arrowFunctionBody", "assignmentOperator", "literal",
                 "numericLiteral", "bigintLiteral", "getter", "setter",
                 "identifierName", "identifier", "reservedWord", "keyword",
                 "let", "eos"]

    EOF = Token.EOF
    HashBangLine = 1
    MultiLineComment = 2
    SingleLineComment = 3
    RegularExpressionLiteral = 4
    OpenBracket = 5
    CloseBracket = 6
    OpenParen = 7
    CloseParen = 8
    OpenBrace = 9
    CloseBrace = 10
    SemiColon = 11
    Comma = 12
    Assign = 13
    QuestionMark = 14
    Colon = 15
    Ellipsis = 16
    Dot = 17
    PlusPlus = 18
    MinusMinus = 19
    Plus = 20
    Minus = 21
    BitNot = 22
    Not = 23
    Multiply = 24
    Divide = 25
    Modulus = 26
    Power = 27
    NullCoalesce = 28
    Hashtag = 29
    RightShiftArithmetic = 30
    LeftShiftArithmetic = 31
    RightShiftLogical = 32
    LessThan = 33
    MoreThan = 34
    LessThanEquals = 35
    GreaterThanEquals = 36
    Equals_ = 37
    NotEquals = 38
    IdentityEquals = 39
    IdentityNotEquals = 40
    BitAnd = 41
    BitXOr = 42
    BitOr = 43
    And = 44
    Or = 45
    MultiplyAssign = 46
    DivideAssign = 47
    ModulusAssign = 48
    PlusAssign = 49
    MinusAssign = 50
    LeftShiftArithmeticAssign = 51
    RightShiftArithmeticAssign = 52
    RightShiftLogicalAssign = 53
    BitAndAssign = 54
    BitXorAssign = 55
    BitOrAssign = 56
    PowerAssign = 57
    ARROW = 58
    NullLiteral = 59
    BooleanLiteral = 60
    DecimalLiteral = 61
    HexIntegerLiteral = 62
    OctalIntegerLiteral = 63
    OctalIntegerLiteral2 = 64
    BinaryIntegerLiteral = 65
    BigHexIntegerLiteral = 66
    BigOctalIntegerLiteral = 67
    BigBinaryIntegerLiteral = 68
    BigDecimalIntegerLiteral = 69
    Break = 70
    Do = 71
    Instanceof = 72
    Typeof = 73
    Case = 74
    Else = 75
    New = 76
    Var = 77
    Catch = 78
    Finally = 79
    Return = 80
    Void = 81
    Continue = 82
    For = 83
    Switch = 84
    While = 85
    Debugger = 86
    Function = 87
    This = 88
    With = 89
    Default = 90
    If = 91
    Throw = 92
    Delete = 93
    In = 94
    Try = 95
    As = 96
    From = 97
    Class = 98
    Enum = 99
    Extends = 100
    Super = 101
    Const = 102
    Export = 103
    Import = 104
    Async = 105
    Await = 106
    Implements = 107
    StrictLet = 108
    NonStrictLet = 109
    Private = 110
    Public = 111
    Interface = 112
    Package = 113
    Protected = 114
    Static = 115
    Yield = 116
    Identifier = 117
    StringLiteral = 118
    TemplateStringLiteral = 119
    WhiteSpaces = 120
    LineTerminator = 121
    HtmlComment = 122
    CDataComment = 123
    UnexpectedCharacter = 124

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JavaScriptParser.EOF, 0)

        def HashBangLine(self):
            return self.getToken(JavaScriptParser.HashBangLine, 0)

        def sourceElements(self):
            return self.getTypedRuleContext(JavaScriptParser.SourceElementsContext, 0)

        def getRuleIndex(self):
            return JavaScriptParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):
        localctx = JavaScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(JavaScriptParser.HashBangLine)

            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.state = 153
                self.sourceElements()

            self.state = 156
            self.match(JavaScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SourceElementContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(JavaScriptParser.StatementContext, 0)

        def getRuleIndex(self):
            return JavaScriptParser.RULE_sourceElement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSourceElement"):
                listener.enterSourceElement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSourceElement"):
                listener.exitSourceElement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSourceElement"):
                return visitor.visitSourceElement(self)
            else:
                return visitor.visitChildren(self)

    def sourceElement(self):

        localctx = JavaScriptParser.SourceElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sourceElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(JavaScriptParser.BlockContext, 0)

        def variableStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.VariableStatementContext, 0)

        def importStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.ImportStatementContext, 0)

        def exportStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.ExportStatementContext, 0)

        def emptyStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.EmptyStatementContext, 0)

        def classDeclaration(self):
            return self.getTypedRuleContext(JavaScriptParser.ClassDeclarationContext, 0)

        def expressionStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.ExpressionStatementContext, 0)

        def ifStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.IfStatementContext, 0)

        def iterationStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.IterationStatementContext, 0)

        def continueStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.ContinueStatementContext, 0)

        def breakStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.BreakStatementContext, 0)

        def returnStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.ReturnStatementContext, 0)

        def yieldStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.YieldStatementContext, 0)

        def withStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.WithStatementContext, 0)

        def labelledStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.LabelledStatementContext, 0)

        def switchStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.SwitchStatementContext, 0)

        def throwStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.ThrowStatementContext, 0)

        def tryStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.TryStatementContext, 0)

        def debuggerStatement(self):
            return self.getTypedRuleContext(JavaScriptParser.DebuggerStatementContext, 0)

        def functionDeclaration(self):
            return self.getTypedRuleContext(JavaScriptParser.FunctionDeclarationContext, 0)

        def getRuleIndex(self):
            return JavaScriptParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)

    def statement(self):

        localctx = JavaScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.variableStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.importStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 163
                self.exportStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 164
                self.emptyStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 165
                self.classDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 166
                self.expressionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 167
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 168
                self.iterationStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 169
                self.continueStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 170
                self.breakStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 171
                self.returnStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 172
                self.yieldStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 173
                self.withStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 174
                self.labelledStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 175
                self.switchStatement()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 176
                self.throwStatement()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 177
                self.tryStatement()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 178
                self.debuggerStatement()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 179
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(JavaScriptParser.StatementListContext, 0)

        def getRuleIndex(self):
            return JavaScriptParser.RULE_block

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)

    def block(self):
